# rust-ffi-examples

./: Cargo.toml  README.md
cpp_examples/: Cargo.toml  build.rs
cpp_examples/include/: test.h
cpp_examples/src/: Test.cpp
rust_ffi/: Cargo.toml  build.rs
rust_ffi/src/: lib.rs
src/: main.rs
