[package]
name = "rust_ffi"
version = "0.1.0"
authors = ["jackie-h <10471950+jackie-h@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.86"

[build-dependencies]
cpp_examples = {path = "../cpp_examples", version = "0.1.0"}